<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/dialog">

        <EditText
            android:id="@+id/txttitulo"
            android:maxLength="50"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/titulo"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtdescripcion"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txttitulo"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/descripcion"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnsalir"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtdescripcion"
            android:layout_toEndOf="@+id/btnoperacion"
            android:layout_toRightOf="@+id/btnoperacion"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/salir" />

        <Button
            android:id="@+id/btnoperacion"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtdescripcion"
            android:text="@string/guardar" />



    </RelativeLayout>
